SFUSA/force-app/main/default/objects/Calendar_Dependent_Values__c/fields/External_Id__c.field-meta.xml
<CustomField>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>