SFUSA/force-app/main/default/objects/Calendar_Dependent_Values__c/fields/Object__c.field-meta.xml
<CustomField>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>