SFUSA/force-app/main/default/objects/Calendar_Dependent_Values__c/fields/Setting__c.field-meta.xml
<CustomField>
        <fullName>Setting__c</fullName>
        <label>Setting</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>